samples/_failures_safe/1761005937_60d1a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76d84485.c: In function ‘main’:
./samples/SAFE/__tmp_76d84485.c:124:46: error: missing terminating " character
  124 |             if (sscanf(entries[i].timestamp, "202
      |                                              ^~~~
./samples/SAFE/__tmp_76d84485.c:124:13: error: expected expression at end of input
  124 |             if (sscanf(entries[i].timestamp, "202
      |             ^~
./samples/SAFE/__tmp_76d84485.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76d84485.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76d84485.c:124:13: error: expected declaration or statement at end of input
